k8s/base/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcast-user-service
  namespace: broadcast-system
spec:
  type: ClusterIP
  selector:
    app: broadcast-user-service
  ports:
    - name: api
      port: 8082
      targetPort: 8082
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 3600
